<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sandeep.prajwal.niramaiprojectsexplorer.MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorPrimary">


        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/user_id_text"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"/>
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/pwd_text"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="10dp"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/submit_button"
        android:text="@string/submit_text"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@color/colorPrimary"
        android:background="@color/colorPrimaryDark"/>

</LinearLayout>
